--- a/package.json
+++ b/package.json
@@ -1,7 +1,13 @@
 {
+  "scripts": {
+    "start": "nodemon 1-Intro.js"
+  },
   "dependencies": {
     "bootstrap": "^5.1.3",
     "loadash": "^1.0.0",
     "lodash": "^4.17.21"
+  },
+  "devDependencies": {
+    "nodemon": "^2.0.15"
   }
 }
